--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/local/anaconda3/envs/shift/bin/python"
+    "python.pythonPath": "C:\\Users\\Pallavi\\Anaconda3\\envs\\ssmif_factor_model\\python.exe"
 }
